# stm32f103xx-rtc

./: .gitignore  Cargo.toml
examples/: semi-hosting-clock.rs
src/: datetime.rs  lib.rs  main.rs
