[package]
name = "stm32f103xx-rtc"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]

[dependencies]
stm32f103xx-hal = { git = "https://github.com/TeXitoi/stm32f103xx-hal", branch = "master" }

[dev-dependencies]
stm32f103xx = { version = "0.10", features = ["rt"] }
cortex-m = "0.5"
cortex-m-rt = { version = "0.5", features = ["device"] }
panic-semihosting = "0.3"
cortex-m-semihosting = "0.3"
heapless = "0.3.6"

