[package]
name = "stm32f103xx-rtc"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[dependencies]
stm32f103xx-hal = { git = "https://github.com/burrbull/stm32f103xx-hal", branch = "ed2018" }

[dev-dependencies]
stm32f103xx = { version = "=0.11.0-alpha.1", features = ["rt"] }
cortex-m = "0.5"
cortex-m-rt = { version = "0.6", features = ["device"] }
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3"
heapless = "0.4"
