[package]
name = "stm32f103xx-rtc"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[dependencies]
stm32f1xx-hal = { version = "0.2", features = ["rt", "stm32f103" ] }

[dev-dependencies]
cortex-m = "0.5"
cortex-m-rt = { version = "0.6", features = ["device"] }
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3"
heapless = "0.4"
